[DevTools] Allow bundled DevTools for Node targets

BUG=691022

Review-Url: https://codereview.chromium.org/2693493003
Cr-Commit-Position: refs/heads/master@{#449699}

Former-commit-id: 41332227e15f05ae9dcbfe1ef6297d041cfc1b9a