chrome/browser/ui/webui/devtools_ui.cc
@@ -280,6 +280,10 @@ void DevToolsDataSource::OnURLFetchComplete(const net::URLFetcher* source) {
 // static
 GURL DevToolsUI::GetProxyURL(const std::string& frontend_url) {
   GURL url(frontend_url);
+  if (url.scheme() == content::kChromeDevToolsScheme &&
+      url.host() == chrome::kChromeUIDevToolsHost)
+    return GURL();
+
   if (!url.is_valid() || url.host() != kRemoteFrontendDomain)
     return GURL(kFallbackFrontendURL);
   return GURL(base::StringPrintf("%s://%s/%s/%s",
